# Petstore

./: README.md  pyproject.toml  pytest.ini  requirements.txt
model/schemas/: pets_schema.py  pets_shema.py
model/versions/: base-api.py  base_api.py  petstore_pet.py
tests/: test_pet.py
