[tool.poetry]
name = "petstore-api"
version = "0.1.0"
description = "api testing for petstore"
authors = ["K1LLsounD"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.0"
requests = "2.31.0"
voluptuous = "^0.13.1"
pytest-voluptuous = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
